--- a/food.html
+++ b/food.html
@@ -40,8 +40,6 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="food.html">FOOD</a></li>
                     <li><a href="drinks.html">DRINKS</a></li>
-                    <li><a href="veggie.html">VEGGIE</a></li>
-                    <li><a href="who.html">WHO ARE WEE</a></li>
 
 
                 </ul>
@@ -60,40 +58,28 @@
             <div class="col-xs-12 kategori">
                 <h1>FORRETTER</h1>
             </div>
+
+            <!--Forret 1-->
+            <template id="produkt_template"></template>
             <div class="col-xs-4">
-                <h4 class="ret">RUSSISK RINGBRØD MED DRUER</h4>
-                <img class="billede" src="pictures/small/ringbroed-druer-sm.jpg" alt="">
-                <p class="beskrivelse">Russisk ringbrød af Karapatisk mel
-                    <br> 39,-
-                </p>
+                <h3 class="data_navn">DATA_NAVN</h3>
+                <a href="#"><img class="img_responsive data_billede" src="pictures/small/ringbroed-druer-sm.jpg" alt=""></a>
+                <h4><span class="data_pris">DATA_PRIS</span>,-</h4>
+                <!--class ved udsolgt-->
+                <h4 class="udsolgttekst">Denne ret er desværre udsolgt</h4>
+                <!--skal kun vises ved udsolgte produkter-->
+
                 <button type="button" class="btn btn-primary btn-lg knap" data-toggle="modal" data-target="#myModal">
                     Læs mere
                 </button>
 
 
             </div>
-            <div class="col-xs-4">
-                <h4>CAVIAR BRUSCHETTA</h4>
-                <img src="pictures/small/caviarbruschetta-sm.jpg" alt="">
-                <p>Brushcetta med russisk Caviar
-                    <br> 49,-
-                </p>
-                <button type="button" class="btn btn-primary btn-lg knap" data-toggle="modal" data-target="#myModal">
-                    Læs mere
-                </button>
-            </div>
-            <div class="col-xs-4">
-                <h4>BALTISK BONDESUPPE</h4>
-                <img src="pictures/small/baltiskbondesuppe-sm.jpg" alt="">
-                <p>Baltisk bondesuppe - en solid starter
-                    <br> 79,-
-                </p>
-                <button type="button" class="btn btn-primary btn-lg knap" data-toggle="modal" data-target="#myModal">
-                    Læs mere
-                </button>
-            </div>
+            </template>
+
 
         </section>
+        <!--
 
         <section class="row">
             <div class="col-xs-12 kategori">
@@ -132,7 +118,9 @@
 
 
         </section>
+-->
 
+        <!--
         <section class="row">
             <div class="col-xs-12 kategori">
                 <h1>DESSERTER</h1>
@@ -169,6 +157,7 @@
             </div>
 
         </section>
+-->
 
         <!-- Modal -->
         <!--     MODAL BOKS -->
@@ -195,11 +184,9 @@
             </div>
         </div>
 
-        <!--                LUK MODAL BOKS-->
 
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
+
+
 
 
 
