--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+    <script src="js/petrograd.js"></script>
+
 </body>
 
 </html>
