--- a/food.html
+++ b/food.html
@@ -50,7 +50,7 @@
 
 
     <div class="row">
-        <div class="col-xs-12 kategori">
+        <div class="col-lg-12">
             <h1 class="page-header">FORRETTER</h1>
         </div>
     </div>
@@ -69,9 +69,7 @@
                 <h4 class="udsolgttekst">Denne ret er desværre udsolgt</h4>
                 <!--skal kun vises ved udsolgte produkter-->
 
-                <button type="button" class="btn btn-primary btn-lg knap" data-toggle="modal" data-target="#myModal">
-                    Læs mere
-                </button>
+                <button type="button" class="btn btn-primary btn-lg open-modal" data-toggle="modal" data-target="#myModal" data-id="21"> Se detaljer <span class="glyphicon glyphicon-chevron-right"></span></button>
 
 
             </div>
